[package]
name = "mqtt-sqlite"
version = "0.0.1"
description = "Connect to MQTT broker and store sensor data on a SQLite database"
edition = "2021"
license = "MIT"

[dependencies]
paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"] }
diesel = { version = "2.1.5", default-features = false, features = [
    "sqlite",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = { version = "2.1.0", default-features = false, features = [
    "sqlite",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.44"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
dotenvy = "0.15.7"
